--- a/render/css/login.css
+++ b/render/css/login.css
@@ -88,7 +88,7 @@ h2 {
   border: none;
   width: 360px;
   height: 40px;
-  margin: 20px 20px;
+  margin: 10px 20px 20px 20px;
   padding: 0 0 0 10px;
   display: block;
   box-sizing: border-box;
@@ -124,6 +124,16 @@ h2 {
   display: inline-block;
   padding: 5px 0;
 }
+.login-container .input-label {
+  font-family: TTOctosquaresCond-Light;
+  vertical-align: top;
+  color: #9d9fa1;
+  font-size: 16px;
+  line-height: 16px;
+  display: inline-block;
+  margin-left: 30px;
+  text-transform: uppercase;
+}
 .login-container .login-button {
   position: absolute;
   bottom: 20px;
@@ -134,6 +144,7 @@ h2 {
   background: #202225;
   color: #9d9fa1;
   cursor: pointer;
+  font-size: 18px;
 }
 .login-container .signup-button {
   position: absolute;
